--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "Bartek Mucha <bartekmucha43@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7"
   }
 }
